Fixed quest display section on dash page when viewing on mobile. Fixed profile image not displaying on page reload, closes issue #129 #story[612]

--- a/ui/src/css/app.css
+++ b/ui/src/css/app.css
@@ -160,3 +160,15 @@ a {
     position: sticky;
     top: 0;
 }
+
+@media only screen and (min-device-width: 992px) {
+    .show-only-mobile {
+        visibility: hidden;
+    }
+}
+
+@media only screen and (max-device-width: 992px) {
+    .mobileMargins {
+        margin-top: 10px;
+    }
+}
